<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/sfondoimpo"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context=".LogIn" >

    <TextView
        android:id="@+id/txtUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:background="#22FFF8DC"
        android:paddingRight="3dp"
        android:text="@string/txtUsername"
        android:textColor="#000000"
        android:textStyle="bold" />

    <FrameLayout
        android:id="@+id/frameLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </FrameLayout>

    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtNickname"
        android:layout_marginTop="30dp"
        android:background="#22FFF8DC"
        android:text="@string/txtPassword"
        android:textColor="#000000"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtNickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtUsername"
        android:layout_alignBottom="@+id/txtUsername"
        android:layout_toRightOf="@+id/txtUsername"
        android:background="@drawable/opzioni"
        android:ems="10" />

    <EditText
        android:id="@+id/edtCAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtPassword"
        android:layout_alignBottom="@+id/txtPassword"
        android:layout_alignLeft="@+id/edtNickname"
        android:layout_alignRight="@+id/edtNickname"
        android:background="@drawable/opzioni"
        android:ems="10"
        android:inputType="textPassword" />

    <CheckBox
        android:id="@+id/chkRestaCollegato"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/txtPassword"
        android:layout_below="@+id/edtCAP"
        android:layout_marginLeft="-8dp"
        android:layout_marginTop="19dp"
        android:background="#22FFF8DC"
        android:text="@string/chkRestaCollegato"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPasswordLost"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/bottonilog"
        android:text="@string/btnLogin"
        android:textColor="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnRegistrati"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:background="#44FFF8DC"
        android:text="@string/txtInfo"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="italic|bold" />

    <Button
        android:id="@+id/btnRegistrati"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/bottonilog"
        android:text="@string/btnRegistrati"
        android:textColor="#000000"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtNickname"
        android:layout_centerHorizontal="true"
        android:src="@drawable/titolo2" />

    <TextView
        android:id="@+id/txtPasswordLost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chkRestaCollegato"
        android:layout_marginTop="21dp"
        android:layout_toRightOf="@+id/frameLayout1"
        android:background="#44FFF8DC"
        android:text="@string/txtPasswordLost"
        android:textColorHint="#000039"
        android:textSize="15sp"
        android:textStyle="bold" />

</RelativeLayout>